--- a/config.env
+++ b/config.env
@@ -1,14 +1,11 @@
 NODE_ENV=development
-PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
-DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+PORT=5432
+DATABASE=market
+DATABASE_USER=postgres
+DATABASE_LOCAL=localhost
+DATABASE_PASSWORD=0000
+DATABASE_URL = postgres://postgres:0000@localhost:5432/market
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
-
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
